feat: add dry_run_1000 simulation with real randomness
- Fix Market struct fields for proper type compatibility
- Add random variance to predictions using rand crate
- Use relaxed strategy config (2% min edge, 50% confidence)
- Generate detailed JSON and CSV logs in logs/ directory
- Include comprehensive trade metrics (PnL, win rate, drawdown)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,3 +62,7 @@ toml = "0.8"
 [[bin]]
 name = "polymarket-bot"
 path = "src/main.rs"
+
+[[bin]]
+name = "dry_run_1000"
+path = "src/bin/dry_run_1000.rs"
